# supporter_ai

./: .gitignore  README.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini
docs/: ROADMAP.md  SDS.md
src/supporter_ai/: demo_app.py  main.py
src/supporter_ai/common/: config.py  db_utils.py
src/supporter_ai/expression/: tts_engine.py
src/supporter_ai/graph/: state.py  workflow.py
src/supporter_ai/graph/nodes/brain/: reasoning.py
src/supporter_ai/graph/nodes/tools/: gateway.py  memory.py
src/supporter_ai/sensory/: whisper_engine.py
tests/expression/: test_tts_engine.py
tests/sensory/: test_whisper_engine.py
