[tool.poetry]
name = "supporter_ai"
version = "0.1.0"
description = "Qwen2.5-VL 기반 지능형 서포터 에이전트 (Personality & Vision)"
authors = ["Kim Wonhyeok <nnovatecoder@gmail.com>"] # 작성자 정보 복원
packages = [{include = "supporter_ai", from = "src"}]

[tool.poetry.dependencies]
# 1. 파이썬 범위를 3.12 대역으로 제한 (라이브러리 제약 사항)
python = ">=3.12,<3.13"

# [Common & Config]
pydantic = "2.12.5"
pydantic-settings = "2.12.0"
python-dotenv = "1.2.1"
loguru = "0.7.3"
pandas = "2.3.3"
numpy = "2.3.5"

# [Database]
sqlalchemy = "2.0.45"
psycopg2-binary = "2.9.11"
redis = "^5.0.0" # 최신 안정 버전 권장
# 2. redisvl 버전을 0.11.0 이상으로 올려야 함 (체크포인터 요구사항)
redisvl = "^0.13.0" 
neo4j = "6.0.3"
qdrant-client = "^1.12.0"

# [AI & API]
fastapi = "0.125.0"
uvicorn = "0.38.0"
# 3. langgraph 버전을 0.2.x 대역으로 수정 (1.0.5는 존재하지 않거나 호환되지 않는 버전임)
langchain = "*"
langgraph = "*" 
langgraph-checkpoint-redis = "*"
openai = "*"
langchain-openai = "*"
langchain-community = "*"
langchain-core = "*"

# [Sensory & Vision]
pyautogui = "^0.9.54" 
opencv-python = "^4.10.0"

# [Dev & Test]
streamlit = "^1.52.2"
[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
pytest-mock = "3.15.1"
pytest-cov = "7.0.0"
httpx = "0.28.1"
grandalf = "0.8"
tqdm = "4.67.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core", "setuptools>=70.0.0", "packaging>=24.2"]
build-backend = "poetry.core.masonry.api"